--- a/lesson6/source/首頁banner/banner.html
+++ b/lesson6/source/首頁banner/banner.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁 Banner</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="banner">
-        <img src="https://via.placeholder.com/1200x400.png?text=Banner+Image" alt="首頁 Banner 圖片">
-        <div class="banner-text">這裡是 Banner 的文字內容</div>
+<div class="event-section">
+  <h2 class="event-main-title">雙北世界壯年運動會</h2>
+  <p class="event-subtitle">2025-5-17~30和世界挑一場</p>
+
+  <div class="event-card">
+    <div class="event-image-container">
+      <span class="event-image-tag">台北大學場館</span>
+      <img src="https://via.placeholder.com/800x533?text=Placeholder+Image" alt="自行車競技示意圖" class="event-image">
     </div>
-</body>
-</html>
+    <p class="event-caption">自行車競技</p>
+  </div>
+</div>
