--- a/lesson6/source/首頁banner/banner.html
+++ b/lesson6/source/首頁banner/banner.html
@@ -4,7 +4,7 @@
 
   <div class="event-card">
     <div class="event-image-container">
-      <span class="event-image-tag">自行車公路賽</span>
+      <span class="event-image-tag">台北大學場館</span>
       <img src="https://via.placeholder.com/800x533?text=Placeholder+Image" alt="自行車競技示意圖" class="event-image">
     </div>
     <p class="event-caption">自行車競技</p>
